--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,14 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  max-width: 100vw;
+  max-width: 100%;
   overflow-x: hidden;
 }
-
+.row {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 a {
   text-decoration: none;
   letter-spacing: 1px;
@@ -76,7 +80,6 @@ button:hover {
   font-size: 20px;
   font-weight: bold;
   color: #242424;
-  margin: 0 auto;
 }
 .logo__link:hover {
   color: #008ac9;
@@ -143,6 +146,7 @@ button:hover {
 
 #landing {
   position: relative;
+  margin: 0 auto;
 }
 
 
@@ -153,17 +157,15 @@ nav {
 }
 .nav__container {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   padding: 12px 12px;
   margin-top: 20px;
-  margin: 0 auto;
+
 }
 
 .nav__links {
   font-weight: bold;
   font-size: 16px;
-  margin: 0 auto;
 }
 .nav__link {
   margin-left: 32px;
@@ -185,19 +187,17 @@ nav {
   color: white;
   transition: all 300ms ease;
 }
-.row {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-}
 
 /* HEADER */
 header {
-  height: 100vh;
+  position: relative;
 }
 .header__container {
   display: flex;
-  padding-top: 100px;
+  align-items: center;
+  padding: 24px 24px;
+  margin-top: 100px;
+  margin-bottom: 400px;
 }
 .header__description--container {
   /* left header */
@@ -276,13 +276,14 @@ header {
 
 #services {
   position: relative;
-  height: 100vh;
 }
 .service__row {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 12px 12px;
+  margin-bottom: 400px;
 }
 
 .section__desc--container {
@@ -318,16 +319,17 @@ header {
 
 /* professionals */
 #professionals {
-  height: 100vh;
+  position: relative;
 }
 
-.prof__container {
+.prof__row {
   width: 100%;
   display: flex;
   align-items: center;
+  margin-bottom: 400px;
+  padding: 12px 12px;
 }
-.prof__row {
-  width: 50%;
+.prof__section-title {
   display: flex;
   flex-direction: column;
 }
@@ -366,13 +368,15 @@ header {
 /* steps */
 
 #steps {
-  height: 100vh;
+  position: relative;
 }
 
 .steps__row {
   width: 100%;
   display: flex;
   flex-direction: row;
+  margin-bottom: 400px;
+  padding: 12px 12px;
 }
 .steps__img--container {
   width: 50%;
@@ -413,16 +417,22 @@ header {
 /* values */
 
 #values {
-  height: 100vh;
+  position: relative;
 }
 
-.values__container {
+.values__row {
   display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+  flex-wrap: wrap;
+  margin-bottom: 200px;
+  padding: 24px 16px;
+}
+.values__container {
+  width: 50%;
 }
 .values__img--container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 50%;
 }
 
@@ -430,9 +440,10 @@ header {
   width: 500px;
 }
 
-.values__row {
+.values__section-title {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .value__para,
@@ -476,6 +487,8 @@ header {
 }
 
 .btn__values {
+  display: flex;
+  justify-content: center;;
   font-weight: bold;
   background-color: #008ac9;
   color: white;
@@ -492,15 +505,17 @@ header {
 /* pricing */
 
 #plans {
-  height: 144vh;
+  position: relative;
 }
-
-
+.plans__row {
+  margin-top: 500px;
+  margin-bottom: 200px;
+}
 .plan__container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
 }
 
 .plans__title--container {
@@ -523,13 +538,13 @@ header {
 .plan {
   display: flex;
   flex-direction: column;
-  align-items: center;
   border: 1px solid rgba(128, 128, 128, 0.301);
   border-radius: 12px;
   border-top: solid 8px #00b1c9;
   box-shadow: #242424;
   background-color: #ffffff9c;
   text-align: center;
+  margin: 12px 12px;
 }
 
 .plan__title {
@@ -543,7 +558,6 @@ header {
   background-color: #dff1ff;
   border-top: 8px solid #0a90fd;
   color: black;
-  margin: 0 24px;
 }
 
 .plan-header {
@@ -628,13 +642,13 @@ header {
 /* testimonials */
 
 #testimonials {
-  height: 80vh;
 }
 
 .testimonials__row {
   display: flex;
   align-items: center;
   padding: 32px;
+  margin-bottom: 200px;
 }
 .icon {
   width: 100px;
@@ -646,6 +660,7 @@ header {
   display: flex;
   flex-direction: row;
   margin-top: 32px;
+  width: 100%;
 }
 .icon__title {
   padding: 12px 8px;
@@ -672,6 +687,7 @@ header {
 }
 
 .stars {
+  width: 100%;
   margin-bottom: 24px;
   margin-top: 24px;
 }
@@ -690,12 +706,12 @@ header {
 
 /* faqs */
 #faqs {
-  height: 100vh;
   position: relative;
 }
 .faqs__row {
   display: flex;
   flex-direction: column;
+  margin-bottom: 200px;
 }
 
 .faqs__title--container {
@@ -736,13 +752,11 @@ header {
 
 /* developers  */
 #developers {
-  height: 60vh;
   position: relative;
 }
 
-
-.dev__container {
-  margin: 0 auto;
+.dev__row{
+  margin-bottom: 100px;
 }
 .dev__bg--container {
   width: 100%;
@@ -755,13 +769,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   margin-top: 12px;
 }
 
 .dev__description {
-  font-size: 40px;
+  font-size: 32px;
   font-weight: bold;
   width: 50%;
   margin-left: 100px;
@@ -779,6 +793,8 @@ header {
   letter-spacing: 1.5px;
   margin-left: 32px;
   margin-right: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
   padding: 20px 32px;
   border-radius: 32px;
   color: white;
@@ -875,7 +891,149 @@ footer {
 }
 
 
-/* small laptops, tablets, and large smartphones */
+@media (max-width: 1260px) {
+  .plan__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+@media (max-width: 550px) {
+  .nav__links {
+    display:none;
+  }
+  .btn__menu {
+    display: block
+  }
+  .header__description {
+    font-size: 32px;
+  }
+  .emailbtn__container {
+    width:120%;
+  }
+  .service__wrapper {
+    font-size: 14px;
+  }
+.service__row {
+  display: flex;
+  flex-direction: column;
+}
+.service {
+  width: calc(100% / 2);
+}
+.prof__row {
+  display: flex;
+  flex-direction: column;
+}
+
+.prof__img--container {
+  width: 100%;
+}
+.steps__row {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.values__row {
+  flex-direction: column;
+  align-items: center;
+}
+.value__subtitle--container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+  .btn__values {
+    display: none;
+  }
+  .dev__description {
+    font-size: 12px;
+  }
+  .footer__row {
+    font-size: 12px;
+  }
+  .footer__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 4px 4px;
+  }
+  .footer__img--wrapper {
+    font-size: 16px;
+  }
+  .footer__link {
+    display: flex;
+    font-size: 12px;
+    margin: 4px 4px;
+  }
+  .faqs__row {
+    text-align: center;
+    font-size: small;
+  }
+}
+
+@media (max-width: 370px){
+  .plans__title--container {
+    font-size: x-small;
+  }
+  .plan {
+  font-size: 12px;
+  margin: 12px 12px;
+  width: 100%;
+}
+  .testimonials__row {
+    display: flex;
+    flex-direction: column;
+  }
+  .faqs__qa--container {
+    font-size: xx-small;
+  }
+  .dev__description {
+    margin-left: 50px;
+  }
+  .text--purple {
+    font-size: 24px;
+  }
+  .dev__btn {
+    font-size: 12px;
+    margin: 2px 2px;
+    padding: 12px;
+  }
+  .footer__menu--wrapper, .footer__menu-list {
+    font-size: 8px;
+  }
+  .footer__row {
+    font-size: 8px;
+  }
+  .footer__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px 2px;
+  }
+  .footer__img--wrapper {
+    font-size: 16px;
+  }
+  .footer__link {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 8px;
+    margin: 4px 4px;
+  }
+  .faqs__row {
+    text-align: center;
+    font-size: small;
+  }
+  .footer__links {
+    display: none;
+  }
+  
+}
+
+/* small laptops, tablets, and large smartphones 
 
 @media (max-width: 1210px) {
   .plans__row {
@@ -897,7 +1055,7 @@ footer {
     flex-wrap: wrap;
   }
 }
-/* small phones, tablets and large smartphones */
+/* small phones, tablets and large smartphones 
 @media (max-width: 768px) {
   .nav__links {
     font-size: 14px;
@@ -943,10 +1101,30 @@ footer {
     display: flex;
     align-items: center;
   }
-}
+} 
   
-/* small phones, large smartphones */
+ small phones, large smartphones  
 @media (max-width: 550px) {
+    #landing {
+      height: 200vh;
+      width: 120vw;
+    }
+    #services {
+      height: 200vh;
+      width: 100vw;
+    }
+    #values {
+      height: 120vh;
+    }
+    .values__container {
+      display: flex; 
+    }
+    .values__row {
+      font-size: 12px;
+    }
+    .values__img--container {
+      display: none;
+    }
   .nav__links {
     display:none;
   }
@@ -954,6 +1132,7 @@ footer {
     display: block;
   }
   .prof__container {
+    width: 100%;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -961,11 +1140,19 @@ footer {
   .prof__img--container{
     display: none;
   }
+  .prof__row {
+    display: flex;
+    align-items: center;
+  }
   .prof__btn {
-    width: 200px;
+    width: 100%;
   }
   .prof__section--para {
     margin: 40px 0;
+  }
+  .service__row {
+    display: flex;
+    flex-direction: column;
   }
   .text--purple {
     font-size: 28px;
@@ -1029,23 +1216,15 @@ footer {
     width: 100%;
   }
   .header_img--container {
-    display: none;
+    margin-top: 24px;
   }
   .service__wrapper {
     display: flex;
     font-size: 16px;
   }
   .service {
-    width: calc(100% / 2);
+    width: 100%
   }
 
-}
+} */
 
-@media (max-width: 720px) {
-  .nav__links {
-    display:none;
-  }
-  .btn__menu {
-    display: block;
-  }
-}
